kubernetes/desolabs-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desolabs-app
  namespace: desolabs
  labels:
    app: desolabs-app
    tier: backend
    app.kubernetes.io/part-of: desolabs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: desolabs-app
  template:
    metadata:
      labels:
        app: desolabs-app
        tier: backend
    spec:
      serviceAccountName: desolabs-app
      containers:
        - name: desolabs-app
          image: r.deso.tech/dsk/desolabs-app:1.0.0
          ports:
            - containerPort: 3001
              name: http
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
            requests:
              memory: "32Mi"
              cpu: "50m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readiness
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: desolabs-app
  namespace: desolabs
  labels:
    app: desolabs-app
    tier: backend
    app.kubernetes.io/part-of: desolabs
spec:
  selector:
    app: desolabs-app
  ports:
    - protocol: TCP
      port: 3001
      targetPort: http
      name: http
